--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "@coreui/icons": "^1.0.1",
     "@coreui/utils": "^1.2.4",
     "@popperjs/core": "^2.4.0",
-    "axios": "^0.19.0",
+    "axios": ">=0.21.1",
     "chart.js": "^2.9.3",
     "cropperjs": "^1.5.7",
     "laravel-mix": "^5.0.4",
@@ -112,7 +112,7 @@
     "postcss-cli": "^7.1.1",
     "postcss-combine-duplicated-selectors": "^8.1.0",
     "postcss-merge-rules": "^4.0.3",
-    "pug": "^2.0.4",
+    "pug": ">=3.0.1",
     "resolve-url-loader": "^3.1.0",
     "rimraf": "^3.0.2",
     "sass-loader": "^8.0.2",
